--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,37 +1,34 @@
-.navbar-container{
-    display: flex;
-    flex-direction: row;
+.nav-container {
     width: 100%;
-    height: 100px;
-    background-color: rgb(92, 58, 58);
-    justify-content: space-around;
+    height: 80px;
+    background-color: #000320;
+    display: flex;
     align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
 }
 
-.list {
+.right-container{
+    background: rgba(255, 255, 255, .7);
+    width: 20%;
+    height: 100%;
     display: flex;
     flex-direction: row;
-    list-style: none;
-    margin-left: -30px;
 }
 
-.list-item{
-    text-decoration: none;
-    color: white;
-    margin: 40px;
-    font-size: 20px;
+.triangulo {
+    width: 0;
+    height: 0;
+    border-left: 40px solid transparent;
+    border-right: 40px solid transparent;
+    border-bottom: 80px solid #ffffff;
+    margin-left: -40px;
 }
 
-.logo {
-    width: 100px;
-    height: 100px;
-}
-
-.login{
-    color: white;
-    padding: 5px;
-    background-color: red;
-    border-radius: 5%;
-    border: 1px solid black;
-    font-size: 20px;
+.icon-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
