--- a/src/components/ListItems/ListItems.css
+++ b/src/components/ListItems/ListItems.css
@@ -1,8 +1,8 @@
-.listitems-container {
-    background-color: white;
-    margin: 300px;
-}
-
-.items {
-    color: darkblue;
+.contador{
+height: calc(100% - 80px);
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+color: white;
 }
