--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -32,3 +32,14 @@
     align-items: center;
     width: 100%;
 }
+
+.name-store {
+color: white
+;}
+
+.menu {
+    color: white;
+    font-size: 35px;
+    margin-left: 5%;
+}
+
