--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -1,5 +1,7 @@
 .carrito {
-    color: white;
-    font-size: 35px;
+    color: black;
+    font-size: 45px;
     margin-left: 15%;
+    border: 1px solid lightgray;
+    padding: 0 5px 0 5px;
 }
