--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,45 +1,86 @@
-.nav-container {
-    width: 100%;
-    height: 80px;
-    background-color: #000320;
+nav {
+    border-bottom: 1px solid lightgray;
+}
+
+.nav-top-container {
+height: 35px;
+background-color: black;
+display: flex;
+justify-content: space-evenly;
+}
+
+.social-container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    flex-direction: row;
 }
 
-.right-container{
-    background: rgba(255, 255, 255, .7);
-    width: 20%;
-    height: 100%;
+.social {
+    margin-left: 15px;
+}
+
+.nav-top-title {
+    font-size: 12px;
+    margin-top: 10px;
+}
+
+.orange {
+    color: orange;
+}
+
+.button-container {
     display: flex;
-    flex-direction: row;
-}
-
-.triangulo {
-    width: 0;
-    height: 0;
-    border-left: 40px solid transparent;
-    border-right: 40px solid transparent;
-    border-bottom: 80px solid #ffffff;
-    margin-left: -40px;
-}
-
-.icon-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
     align-items: center;
-    width: 100%;
 }
 
-.name-store {
-color: white
-;}
-
-.menu {
+.button {
     color: white;
-    font-size: 35px;
-    margin-left: 5%;
+    margin-left: 15px;
 }
 
+.nav-bottom-container{
+    height: 125px;
+}
+
+.logo-container{
+    position: absolute;
+    top: -25px;
+    left: 50px;
+}
+
+.logo {
+    width: 250px;
+    height: auto;
+}
+
+.navegation-container {
+    background-color: white;
+    width: 400px;
+    float: right;
+    height: 125px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 100px;
+}
+
+.navegation-grup-top {
+    font-size: 25px;
+    border-bottom: 2px solid orange;
+}
+
+.navegation-grup-top > a {
+    margin-right: 20px;
+    color: gray;
+    text-decoration: none;
+}
+
+.navegation-grup-bottom {
+    font-size: 15px;
+    float: right;
+}
+
+.navegation-grup-bottom > a {
+    margin-right: 20px;
+    color: black;
+    text-decoration: none;
+}
