--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -64,7 +64,7 @@ justify-content: space-evenly;
 }
 
 .navegation-grup-top {
-    font-size: 25px;
+    font-size: 12px;
     border-bottom: 2px solid orange;
 }
 
@@ -83,4 +83,9 @@ justify-content: space-evenly;
     margin-right: 20px;
     color: black;
     text-decoration: none;
+}
+
+.link-active {
+    color: black;
+    border-top: 2px solid orange;
 }
